--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x128.png" type="image/x-icon">
-  <meta name="description" content="Maestros espirituales especialistas en todo tipo de trabajos relacionados con el amor.">
+  <meta name="description" content="Maestros espirituales especialistas en todo tipo de trabajos, pactos con lucifer.">
   
   
   <title>Pactos</title>
