create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">
                         <strong>
 </strong><div><strong><br></strong></div><div><strong>Pactos con Lucifer</strong></div></h1>
-                    <p class="mbr-text mbr-fonts-style display-7">Usted Podrá mejorar su vida económica, su vida amorosa, su salud y podrá materializar cualquier petición, haciendo un poderoso pacto con nuestro padre lucifer.
+                    <p class="mbr-text mbr-fonts-style display-7">Usted Podrá mejorar su vida económica, su vida haciendo un poderoso pacto con nuestro padre lucifer.
 <br>
 <br>contáctese con el Maestro Superior  para ver si puede ser elegido.</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://contacto.guru/Lui1" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>CONTACTAR AHORA</a></div>
