--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <title>Pactos</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -48,7 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img class="w-100" src="assets/images/p1-564x701.jpg" alt="">
+                <img class="w-100" src="assets/images/altares-28.webp" alt="">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -123,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img class="w-100" src="assets/images/p2-261x375.jpg" alt="">
+                <img class="w-100" src="assets/images/pactos-2-24.webp" alt="">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -149,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img class="w-100" src="assets/images/p3-563x828.jpg" alt="">
+                <img class="w-100" src="assets/images/pactos-2-9.webp" alt="">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -173,7 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img class="w-100" src="assets/images/p5.webp" alt="">
+                <img class="w-100" src="assets/images/pactos-4.webp" alt="">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -197,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img class="w-100" src="assets/images/p4-308x589.jpg" alt="">
+                <img class="w-100" src="assets/images/altares-30.webp" alt="">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -224,15 +225,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="mbr-section-head mb-4">
                     
                 </div>
-                <div id="bootstrap-accordion_13" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_6" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_13" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_6" aria-expanded="false" aria-controls="collapse1">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Términos y Condiciones</strong></h6>
                                 <span class=" panel-title-edit fa fa-chevron-down mbr-iconfont mbr-fonts-style"></span>
                             </a>
                         </div>
-                        <div id="collapse1_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_13">
+                        <div id="collapse1_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">-Este sitio va dirigido exclusivamente a mayores de edad (18 años).
 <br>
@@ -254,12 +255,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_13" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_6" aria-expanded="false" aria-controls="collapse2">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Costos de Ia Llamada/Contacto y pago por servicios</strong></h6>
                                 <span class=" panel-title-edit fa fa-chevron-down mbr-iconfont mbr-fonts-style"></span>
                             </a>
                         </div>
-                        <div id="collapse2_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_13">
+                        <div id="collapse2_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">-Toda llamada o mensaje a nuestros números de contacto puede acarrear costos de acuerdo a su compañía telefónica.
 <br>
@@ -272,12 +273,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_13" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_6" aria-expanded="false" aria-controls="collapse3">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Garantía de los servicios</strong></h6>
                                 <span class=" panel-title-edit fa fa-chevron-down mbr-iconfont mbr-fonts-style"></span>
                             </a>
                         </div>
-                        <div id="collapse3_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_13">
+                        <div id="collapse3_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">-Los resultados ante cada caso son probables y no hay certeza alguna a de que ocurran, quien consulte mi página web entenderá que no existe evidencia científica o eficacia de los mismos.
 <br>
@@ -290,12 +291,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_13" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_6" aria-expanded="false" aria-controls="collapse4">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-4"><strong>Políticas de Privacidad</strong></h6>
                                 <span class=" panel-title-edit fa fa-chevron-down mbr-iconfont mbr-fonts-style"></span>
                             </a>
                         </div>
-                        <div id="collapse4_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_13">
+                        <div id="collapse4_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_6">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4"><br>Políticas de Privacidad
 <br>Todos los datos proporcionados por los usuarios serán tratados con confidencialidad, respeto y garantía de ser dinfundida por ningún medio.
