create github pages

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-12 col-lg-6">
                 <div class="card-wrapper">
                     <div class="card-box align-left">
-                        <h4 class="card-title mbr-fonts-style mb-4 display-1"><strong>Llámanos al</strong><br><strong>+1 714 982 9177&nbsp;</strong></h4>
+                        <h4 class="card-title mbr-fonts-style mb-4 display-1"><strong>Contáctanos al</strong><br><strong>+1 714 982 9177&nbsp;</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">
                             Contáctese en este momento con el maestro superior</p>
-                        <div class="mbr-section-btn"><a class="btn btn-secondary display-4" href="tel:17149829177"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>LLÁMANOS&nbsp;</a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-secondary display-4" href="https://contacto.guru/Lui1" target="_blank"><span class="fa fa-whatsapp mbr-iconfont mbr-iconfont-btn"></span>CONTACTAR</a> <a class="btn btn-info display-4" href="tel:17149829177"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>LLAMAR</a></div>
                     </div>
                 </div>
             </div>
